Added text in html files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>
+      Caleb's Personal Website
+    </title>
+  </head>
   <body>
-    Hello World! This is my website.
+    <nav></nav>
+    <main>
+      <p>
+        Hi, my name is <b>Caleb So</b>. I am a 2nd year Computer Science major at Cal Poly. I like to play baseketball, piano, and I like going to the gym and lifting weights.
+      </p>
+    </main>
+    <footer>© 2025 Caleb's Personal Website | All Rights Reserved</footer>
   </body>
 </html>
