Added classes for header, div,  nav, and footer

--- a/index.html
+++ b/index.html
@@ -6,12 +6,25 @@
     </title>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <h1 class="logo"></h1>
+      
+    </nav class="navbar">
     <main>
+      <h1 class="page-title"></h1>
+      <div class="about">
+        <div class="about-image"></div>
+        <div class="about-text">
       <p>
         Hi, my name is <b>Caleb So</b>. I am a 2nd year Computer Science major at Cal Poly. I like to play baseketball, piano, and I like going to the gym and lifting weights.
       </p>
+      <p>
+        I want to join Hack4Impact to actually put my coding skills to work in real world situations, and be able to help others through it.
+      </p>
     </main>
-    <footer>© 2025 Caleb's Personal Website | All Rights Reserved</footer>
+    <footer class="footer">
+      © 2025 Caleb's Personal Website | All Rights Reserved
+      
+    </footer>
   </body>
 </html>
