--- a/portfolio.html
+++ b/portfolio.html
@@ -6,14 +6,17 @@
         </title>
     </head>
     <body>
-        <nav>
-
+        <nav class="navbar">
+        <h1 class="logo"></h1>
+        
         </nav>
         <main>
-        This is my portfolio page
+            <h1 clas="page-title"></h1>
+            <div class="project"></div>
         </main>
-        <footer>
-      © 2025 Caleb's Personal Website | All Rights Reserved
+        <footer class="footer">
+        © 2025 Caleb's Personal Website | All Rights Reserved
+        
         </footer>
 
     </body>
