--- a/blog.html
+++ b/blog.html
@@ -6,13 +6,15 @@
         </title>
     </head>
     <body>
-        <nav>
-
+        <nav class="navbar">
+        <h1 class="logo"></h1>
         </nav>
         <main>
+            <h1 class="page-title"></h1>
         This is my blog page
         </main>
-        <footer>
+        <footer class="footer"
+>
         © 2025 Caleb's Personal Website | All Rights Reserved
         </footer>
 
