--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,17 @@
         </title>
     </head>
     <body>
-        <nav>
-
+        <nav class="navbar">
+        <h1 class="logo"></h1>
+        
         </nav>
         <main>
+            <h1 class="page-title"></h1>
         This is my contact page
         </main>
-        <footer>
+        <footer class="footer">
         © 2025 Caleb's Personal Website | All Rights Reserved
+        
         </footer>
 
     </body>
