Added links to other pages

--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     </title>
   </head>
   <body>
-    <nav>
-      <h1 class="logo"></h1>
-      
-    </nav class="navbar">
+    <nav class="navbar">
+      <h1 class="logo">
+        <a href="index.html">Personal website</a>
+      </h1>
+
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+
+    </nav>
     <main>
       <h1 class="page-title"></h1>
       <div class="about">
@@ -21,6 +31,7 @@
       <p>
         I want to join Hack4Impact to actually put my coding skills to work in real world situations, and be able to help others through it.
       </p>
+      <img src="sky.jpg" alt="An image of the sky and clouds">
     </main>
     <footer class="footer">
       © 2025 Caleb's Personal Website | All Rights Reserved
