--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,33 @@
         </title>
     </head>
     <body>
-        <nav class="navbar">
-        <h1 class="logo"></h1>
-        
-        </nav>
+    <nav class="navbar">
+      <h1 class="logo">
+        <a href="contact.html">Contact Page</a>
+      </h1>
+
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+
+    </nav>
         <main>
             <h1 class="page-title"></h1>
-        This is my contact page
+
+            <form id="contact-form">
+                <label for="name">Name:</label>
+                <input type="text" id="name">
+
+                <label for="email">Email:</label>
+                <input type="email" id="email">
+                <label for="Message">Message:</label>
+                <textarea name="Message" id="textarea"></textarea>
+                <input type="submit">
+            </form>
         </main>
         <footer class="footer">
         © 2025 Caleb's Personal Website | All Rights Reserved
