--- a/portfolio.html
+++ b/portfolio.html
@@ -6,13 +6,31 @@
         </title>
     </head>
     <body>
-        <nav class="navbar">
-        <h1 class="logo"></h1>
-        
-        </nav>
+     <nav class="navbar">
+      <h1 class="logo">
+        <a href="portfolio.html">Portfolio Page</a>
+      </h1>
+
+      <ul class="nav-list">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+
+     </nav>
         <main>
             <h1 clas="page-title"></h1>
-            <div class="project"></div>
+            <div class="project">
+                <a href="index.html"><img src="sky.jpg" alt="An image of the sky and clouds"></a>
+                <div class="project-details">
+                    <p class="project-name">Personal Website</p>
+                    <p class="project-description">Holds links to helpful pages about me</p>
+                    <a href="index.html">Learn More</a>
+                    <p></p>
+                </div>
+            </div>
         </main>
         <footer class="footer">
         © 2025 Caleb's Personal Website | All Rights Reserved
