--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <nav class="navbar">
       <h1 class="logo">
-        <a href="index.html">Personal website</a>
+        <a href="index.html">Personal Website</a>
       </h1>
 
       <ul class="nav-list">
