--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
     <main>
 
     <h1 class= "page-title>"> </h1>
-    <a href="resume.pdf" download="">Download Resume</a>
+    <a href="resume.pdf">Download Resume</a>
 
     <div class="resume">
         <section class="section">
