--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
         <title>
             Blog Page
         </title>
+         <link rel="stylesheet" href="styles.min.css" />
     </head>
     <body>
         <nav class="navbar">
