--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
         <title>
             Contact page
         </title>
+         <link rel="stylesheet" href="styles.min.css" />
     </head>
     <body>
     <nav class="navbar">
