Made web page more appealing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
       Caleb's Personal Website
     </title>
-    <link rel="stylesheet" href="styles.min.css" />
+    <link rel="stylesheet" href="styles.enhanced.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -26,13 +26,14 @@
       <div class="about">
         <div class="about-image"></div>
         <div class="about-text">
+      <img src="sky.jpg" alt="An image of the sky and clouds">
       <p>
         Hi, my name is <b>Caleb So</b>. I am a 2nd year Computer Science major at Cal Poly. I like to play baseketball, piano, and I like going to the gym and lifting weights.
       </p>
       <p>
         I want to join Hack4Impact to actually put my coding skills to work in real world situations, and be able to help others through it.
       </p>
-      <img src="sky.jpg" alt="An image of the sky and clouds">
+      
     </main>
     <footer class="footer">
       © 2025 Caleb's Personal Website | All Rights Reserved
