--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
         <title>
             Portfolio Page
         </title>
-         <link rel="stylesheet" href="styles.min.css" />
+         <link rel="stylesheet" href="styles.enhanced.css" />
     </head>
     <body>
      <nav class="navbar">
