--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
         <title>
             Caleb's Resume
         </title>
-         <link rel="stylesheet" href="styles.min.css" />
+         <link rel="stylesheet" href="styles.enhanced.css" />
     </head>
     <body>
     <nav class="navbar">
