feat: Finsihed formatting for all pages

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Blog Page
+            Caleb's Blog Page
         </title>
          <link rel="stylesheet" href="styles.enhanced.css" />
     </head>
