--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="about">
         <div class="about-image"></div>
         <div class="about-text">
-      <img src="sky.jpg" alt="An image of the sky and clouds">
+      <img src="photo.jpg" alt="An image of author" style="width: 200px;height: 200px" id="hp">
       <p>
         Hi, my name is <b>Caleb So</b>. I am a 2nd year Computer Science major at Cal Poly. I like to play baseketball, piano, and I like going to the gym and lifting weights.
       </p>
