--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         <main>
             <h1 clas="page-title"></h1>
             <div class="project">
-                <a href="index.html"><img src="sky.jpg" alt="An image of the sky and clouds"></a>
+                <a href="index.html"><img src="screenshot.png" alt="An image of the main webpage" style="width: 300;height: 300px;"></a>
                 <div class="project-details">
                     <p class="project-name">Personal Website</p>
                     <p class="project-description">Holds links to helpful pages about me</p>
