--- a/contact.html
+++ b/contact.html
@@ -25,14 +25,16 @@
             <h1 class="page-title"></h1>
 
             <form id="contact-form">
-                <label for="name">Name:</label>
-                <input type="text" id="name">
+                <label for="name">Name:</label><br>
+                <input type="text" id="name"><br>
+                
 
-                <label for="email">Email:</label>
-                <input type="email" id="email">
-                <label for="Message">Message:</label>
-                <textarea name="Message" id="textarea"></textarea>
-                <input type="submit">
+                <label for="email">Email:</label><br>
+                <input type="email" id="email"><br>
+                
+                <label for="Message">Message:</label><br>
+                <textarea name="Message" id="textarea"></textarea><br>
+                <input type="submit"><br>
             </form>
         </main>
         <footer class="footer">
