--- a/index.html
+++ b/index.html
@@ -24,15 +24,18 @@
     <main>
       <h1 class="page-title"></h1>
       <div class="about">
-        <div class="about-image"></div>
+        <div class="about-image">
+            <img src="photo.jpg" alt="An image of author" id="hp">
+        </div>
         <div class="about-text">
-      <img src="photo.jpg" alt="An image of author" style="width: 200px;height: 200px" id="hp">
-      <p>
-        Hi, my name is <b>Caleb So</b>. I am a 2nd year Computer Science major at Cal Poly. I like to play baseketball, piano, and I like going to the gym and lifting weights.
-      </p>
-      <p>
-        I want to join Hack4Impact to actually put my coding skills to work in real world situations, and be able to help others through it.
-      </p>
+          <p>
+            Hi, my name is <b>Caleb So</b>. I am a 2nd year Computer Science major at Cal Poly. I like to play baseketball, piano, and I like going to the gym and lifting weights.
+          </p>
+          <p>
+            I want to join Hack4Impact to actually put my coding skills to work in real world situations, and be able to help others through it.
+          </p>
+        </div>
+      </div>
       
     </main>
     <footer class="footer">
