--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <body>
      <nav class="navbar">
       <h1 class="logo">
-        <a href="portfolio.html">Portfolio Page</a>
+        <a href="portfolio.html">Portfolio</a>
       </h1>
 
       <ul class="nav-list">
@@ -22,14 +22,29 @@
 
      </nav>
         <main>
-            <h1 clas="page-title"></h1>
-            <div class="project">
-                <a href="index.html"><img src="screenshot.png" alt="An image of the main webpage" style="width: 300;height: 300px;"></a>
-                <div class="project-details">
-                    <p class="project-name">Personal Website</p>
-                    <p class="project-description">Holds links to helpful pages about me</p>
-                    <a href="index.html">Learn More</a>
-                    <p></p>
+            <h1 class="page-title"></h1>
+            <div class="card">
+                <div class="project">
+                    <img src="homepage_screenshot.jpg" alt="An image of the main webpage">
+                    <div class="project-details">
+                        <h2>Personal Website</h2>
+                        <p>Holds links to helpful pages about me</p>
+                        <div class="button-container">
+                            <a href="index.html" class="submit-button">Visit</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="project">
+                    <img src="linkedin_screenshot.jpg" alt="LinkedIn profile screenshot">
+                    <div class="project-details">
+                        <h2>My LinkedIn Profile</h2>
+                        <p>Here is a screenshot of my LinkedIn profile</p>
+                        <div class="button-container">
+                            <a href="https://linkedin.com/in/caleb-so" target="_blank" class="submit-button">Visit</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
