--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <body>
     <nav class="navbar">
       <h1 class="logo">
-        <a href="contact.html">Contact Page</a>
+        <a href="contact.html">Contact Me</a>
       </h1>
 
       <ul class="nav-list">
@@ -24,18 +24,23 @@
         <main>
             <h1 class="page-title"></h1>
 
-            <form id="contact-form">
-                <label for="name">Name:</label><br>
-                <input type="text" id="name"><br>
-                
+            <div class="card">
+                <form id="contact-form">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name">
 
-                <label for="email">Email:</label><br>
-                <input type="email" id="email"><br>
-                
-                <label for="Message">Message:</label><br>
-                <textarea name="Message" id="textarea"></textarea><br>
-                <input type="submit"><br>
-            </form>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email">
+
+                    <label for="Message">Message:</label>
+                    <textarea name="Message" id="textarea"></textarea>
+
+                    <button type="submit" class="submit-button">
+                        Submit
+                        <img src="paper-plane.png" alt="paper plane icon" />
+                    </button>
+                </form>
+            </div>
         </main>
         <footer class="footer">
         © 2025 Caleb's Personal Website | All Rights Reserved
