resume edit skills

--- a/resume.html
+++ b/resume.html
@@ -68,19 +68,19 @@
         <h1 class="Skills">Skills</h1>
         <ul class="skill-list">
             <li>
-                Languages: Python, Java, JavaScript, HTML
+                <b>Languages:</b> Python, Java, JavaScript, HTML, CSS
             </li>
             <li>
-                Developer Tools: Git, GitHub, VS Code, IntelliJ, pip
+                <b>Developer Tools:</b> Git, GitHub, VS Code, IntelliJ, pip
             </li>
             <li>
-                Markup / Formats: YAML, XML, Markdown
+                <b>Markup/Formats:</b> YAML, XML, Markdown
             </li>
             <li>
-                Databases: Neo4j (basic exposure)
+                <b>Databases:</b> Neo4j
             </li>
             <li>
-                Other: Linux, macOS, Windows; troubleshooting and support; customer service
+                <b>Other:</b> Linux, macOS, Windows; troubleshooting and support; customer service
             </li>
 
         </ul>
@@ -186,7 +186,7 @@
                 <b>Robotics Team & Student Mentor,</b> Chandler Preparatory Academy, AZ
             </li>
             <li>
-                <b>Youth Group Leadership Team, Pianist, AV Tech,</b>First Baptist Church Chandler, AZ
+                <b>Youth Group Leadership Team, Pianist, AV Tech, </b>First Baptist Church Chandler, AZ
             </li>
             <li>
                 <b>Volunteer Pianist,</b> various Senior Memory Care Centers, AZ
