--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar">
         <h1 class="logo">
-        <a href="blog.html">My Blog</a>
+        <a href="index.html">Caleb So</a>
         </h1>
 
         <ul class="nav-list">
