--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="navbar">
       <h1 class="logo">
-        <a href="index.html">Personal Website</a>
+        <a href="index.html">Caleb So</a>
       </h1>
 
       <ul class="nav-list">
